<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:fitsSystemWindows="true" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            app:expandedTitleTextAppearance="@style/ToolbarTheme"
            app:collapsedTitleTextAppearance="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/app_primary_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/appName"
            android:theme="@style/ToolbarTheme"
            app:expandedTitleGravity="center|bottom"
            android:background="@drawable/ctr_bg">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:src="@drawable/vaccination"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/vaccination_image"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/horizontal_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="50dp"
                    android:paddingEnd="50dp"
                    android:padding="12dp"
                    app:singleSelection="true"
                    app:chipSpacing="12dp"
                    android:overScrollMode="ifContentScrolls">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        android:checked="true"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip4"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip5"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip6"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip7"
                        style="@style/customChipStyle"
                        android:text="@string/chip"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/app_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/check_by_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:fontFamily="@font/montserrat_bold"
                android:padding="20dp"
                android:text="@string/check_by_pin"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_chips" />

            <TextView
                android:id="@+id/tv_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="10dp"
                android:text="PIN"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_pin"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_pin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="400000"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/btn_pin"
                app:layout_constraintStart_toEndOf="@+id/tv_pin"
                app:layout_constraintTop_toBottomOf="@id/check_by_pin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:inputType="number"
                    android:maxLength="6" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/check"
                android:backgroundTint="@color/app_primary_color"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_pin"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/check_by_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="20dp"
                android:text="@string/check_by_district"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_pin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="12dp"
                android:hint="@string/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_by_district">


                <AutoCompleteTextView
                    android:id="@+id/currentState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/antic"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/select_state" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_district"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/district"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_state">


                <AutoCompleteTextView
                    android:id="@+id/currentDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/antic"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/select_district" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/app_primary_color"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/check"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/select_district"
                app:layout_constraintTop_toBottomOf="@id/select_state" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_district" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/click_on_the_register_sign_in_button_to_book_your_slot"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="70dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/book_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/register_sign_in"
        android:textAllCaps="true"
        android:clickable="true"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_bg"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

